<resources>
    <string name="app_name">Epicture</string>
    <string name="title_activity_menu">Menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="feed">Feed</string>
    <string name="search_photo">Search Photo</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="favorites">Favorites</string>
    <string name="filters">Filters</string>
    <string name="public_key">5ltFRmotOj9nRps2k5RLXkf54wA</string>
    <string name="sign_in_with_instagram">Sign in with Instagram</string>
    <string name="last_post">Last Post</string>
    <string name="search_post">Search Post</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="profile_image_home">profile_image_home</string>
    <string name="image_of_the_media">Image of the media</string>
    <string name="title_activity_comments">CommentsActivity</string>
</resources>
