<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/ic_collections_black_24dp"
            android:title="@string/last_post" />
        <item
            android:id="@+id/nav_search"

            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search_post" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_filters"
            android:icon="@drawable/ic_photo_filter_black_24dp"
            android:title="@string/filters" />

    </group>

</menu>
