<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eu.epitech.sebastienrochelet.epicture.fragments.HomeFragment">

    <ImageView
        android:id="@+id/profile_image_home"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginBottom="13dp"
        android:layout_marginEnd="104dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/profile_image_home"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toTopOf="@+id/full_name_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/full_name_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:layout_marginEnd="142dp"
        android:layout_marginStart="142dp"
        android:text="@string/full_name"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/username_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/username_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="243dp"
        android:layout_marginEnd="151dp"
        android:layout_marginStart="152dp"
        android:text="@string/username"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
